--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -1,4 +1,45 @@
 .header {
-    background-color: $color-black;
-    color: $color-white;
+    position: absolute;
+    top: 48px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    padding: 0 $x_96_spaces;
+    max-width: 1640px;
+
+    .header_btn {
+        background-color: $color-background-primary-dark;
+        color: $color-white;
+        font-size: 16px;
+        padding: 12px 20px 12px 12px;
+        border-radius: $border-radius_70;
+        gap: 10px;
+
+        &,
+        svg path {
+            transition: .3s ease-in-out;
+        }
+
+        &:hover {
+            background-color: $color-white;
+            color: $color-background-primary-dark;
+
+            svg {
+                path {
+                    fill: $color-background-primary-dark;
+                }
+            }
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .header {
+        padding: 0 20px;
+        top: 28px;
+    }
+
+    .logo {
+        width: 120px;
+    }
 }
