--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,3 +10,12 @@ $color-text-surface: #f9f8fd;
 
 $color-background-primary-dark: #181818;
 $color-background-secondary-dark: #171717;
+
+// =========== BORDER =================== //
+$border-radius_70: 70px;
+$border-radius_80: 80px;
+$border-color: #FFFFFF3D;
+
+// =============== SPACES ============ //
+$x_96_spaces: 96px;
+$x_80_spaces: 80px;
