--- a/src/components/layout/footer/footer.module.scss
+++ b/src/components/layout/footer/footer.module.scss
@@ -4,10 +4,16 @@
     border-radius: $border-radius_80;
     padding: 84px 40px;
 
+    @media(max-width: 767px) {
+        border-radius: 30px;
+
+    }
+
     .text {
         font-size: 20px;
         font-weight: 400;
         color: #FFFFFF80;
+
     }
 
     .title {
@@ -21,5 +27,17 @@
         font-size: 24px;
         font-weight: 400;
         text-decoration: underline;
+    }
+
+    @media(max-width: 767px) {
+        .text {
+            font-size: 12px;
+        }
+        .title {
+            font-size: 32px;
+        }
+        .link {
+            font-size: 14px;
+        }
     }
 }
