--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -4,7 +4,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    padding: 0 $x_96_spaces;
+    padding: 0 96px;
     max-width: 1640px;
 
     .header_btn {
@@ -31,15 +31,21 @@
             }
         }
     }
+
+    .logo {
+        width: 182px;
+        height: auto;
+    }
 }
 
-@media(max-width: 768px) {
+@media(max-width: 767px) {
     .header {
         padding: 0 20px;
         top: 28px;
+
+        .logo {
+            width: 120px;
+        }
     }
 
-    .logo {
-        width: 120px;
-    }
 }
