--- a/src/components/sections/fit-fuel/fit-fuel.module.scss
+++ b/src/components/sections/fit-fuel/fit-fuel.module.scss
@@ -2,4 +2,30 @@
     background-color: $color-primary;
     border-radius: $border-radius_80;
     padding: 57px 48px 57px 0;
+
+    .image {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+    }
+
+    @media(max-width: 767px) {
+        border-radius: 30px;
+        padding: 12px;
+
+        .title {
+            width: 100%;
+        }
+
+        .bolt_icon {
+            height: 80px;
+            transform: translateY(80px);
+            width: auto;
+        }
+
+        .image {
+            margin-top: 50px;
+        }
+    }
 }
