--- a/src/components/sections/fit-guide/guide.module.scss
+++ b/src/components/sections/fit-guide/guide.module.scss
@@ -2,12 +2,15 @@
     border: 1px solid #FFFFFF3D;
     padding: 85px 0;
     border-radius: $border-radius_80;
+    position: relative;
 
     @media(max-width: 678px) {
         height: 727px;
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 24px 0;
+        border-radius: 30px;
     }
 
     .shapes {
@@ -21,13 +24,14 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
+        padding: 24px 0;
 
         @media(max-width: 678px) {
             flex-direction: column;
             gap: 60px;
             left: 0;
             top: 0;
-            transform: translate(0);
+            transform: translateY(33px);
         }
 
         .semicircle {
@@ -45,6 +49,7 @@
                 height: 98px;
                 border-bottom-right-radius: 98px;
                 border-bottom-left-radius: 98px;
+                transform: rotate(-45deg) translateY(0);
             }
         }
 
@@ -66,6 +71,11 @@
             height: 76px;
             position: relative;
 
+            @media(max-width: 678px) {
+                width: 43px;
+                height: 170px;
+            }
+
             &::after {
                 position: absolute;
                 left: 50%;
@@ -75,6 +85,11 @@
                 background-color: $color-background-primary-dark;
                 width: 75px;
                 height: 295px;
+
+                @media(max-width: 678px) {
+                    width: 170px;
+                    height: 43px;
+                }
             }
         }
     }
