--- a/src/components/sections/get-your-fit/fit.module.scss
+++ b/src/components/sections/get-your-fit/fit.module.scss
@@ -1,14 +1,15 @@
 .image_box {
     position: relative;
+    padding-bottom: 18px;
 
     @media(max-width: 678px) {
-        padding: 0 16px;
+        padding: 0 16px 5px;
     }
 
     &::after {
         position: absolute;
         content: "";
-        bottom: -19px;
+        bottom: 0;
         left: 0;
         width: 100%;
         height: 63%;
@@ -18,7 +19,6 @@
 
         @media(max-width: 678px) {
             border-radius: 30px;
-            bottom: -5px;
         }
     }
 
