--- a/src/components/sections/hero/hero.module.scss
+++ b/src/components/sections/hero/hero.module.scss
@@ -1,14 +1,16 @@
 .hero_section {
-    // height: calc(100vh - 34px);
+    height: calc(100vh - 34px);
+    min-height: 700px;
     padding-top: 150px;
     padding-bottom: 68px;
     background-color: $color-primary;
     border-radius: $border-radius_80;
+    max-height: 910px;
 
     .hero_content {
         height: 100%;
         width: 100%;
-        padding: 0 $x_80_spaces;
+        padding: 0 80px;
     }
 
     .hero_text {
@@ -38,12 +40,10 @@
 
     .hero_img {
         position: relative;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
     }
 }
 
@@ -52,6 +52,7 @@
     align-items: center;
     gap: 16px;
     margin-top: 16px;
+    margin-bottom: 96px;
 
     .tag_btn {
         color: #fff;
@@ -67,11 +68,13 @@
     }
 }
 
-@media(max-width: 768px) {
+@media(max-width: 767px) {
     .hero_section {
         border-radius: 30px;
         padding-top: 110px;
         padding-bottom: 12px;
+        height: auto;
+        max-height: none;
 
         .hero_content {
             height: 100%;
@@ -101,14 +104,9 @@
         }
 
         .hero_img {
-            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-
-            >img {
-                width: fit-content;
-            }
         }
 
     }
@@ -119,6 +117,8 @@
         grid-auto-rows: auto;
         gap: 8px;
         padding: 0 8px;
+        margin-top: 12px;
+        margin-bottom: 42px;
 
         .tag_btn {
             flex: auto;
