--- a/src/components/sections/tracking/tracking.module.scss
+++ b/src/components/sections/tracking/tracking.module.scss
@@ -1,3 +1,38 @@
 .section {
-    margin-top: 144px;
+    margin-top: 180px;
+
+    @media(max-width: 767px) {
+        margin-top: 112px;
+    }
+
+    .image_box {
+        position: relative;
+        margin-top: 82px;
+
+        @media(max-width: 678px) {
+            padding: 0 16px 5px;
+        }
+
+        &::after {
+            position: absolute;
+            content: "";
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 63%;
+            background-color: $color-background-primary-dark;
+            z-index: -1;
+            border-radius: $border-radius_80;
+
+            @media(max-width: 678px) {
+                border-radius: 30px;
+                // bottom: -5px;
+            }
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
