--- a/src/components/sections/workout/workout.module.scss
+++ b/src/components/sections/workout/workout.module.scss
@@ -1,15 +1,32 @@
 .Workout_btn {
     margin-top: 86px;
+
+    @media(max-width: 767px) {
+        margin-top: 32px;
+    }
 }
+
+@media(max-width: 767px) {
+    .image {
+        height: auto;
+    }
+}
+
 .plus {
-    background-color: #ebff00;
+    background-color: $color-accent;
     width: 40px;
     height: 108px;
     position: absolute;
-    transform: translateX(-109px);
-    top: 251px;
-    left: -35px;
     transform: rotate(45deg);
+    top: 29%;
+    left: -4%;
+
+    @media(max-width: 767px) {
+        width: 14px;
+        height: 39px;
+        top: 32%;
+        left: 0%;
+    }
 
     &::after {
         content: "";
@@ -18,5 +35,10 @@
         width: 40px;
         height: 108px;
         transform: rotate(90deg);
+
+        @media(max-width: 767px) {
+            width: 14px;
+            height: 39px;
+        }
     }
 }
