--- a/src/components/sections/fit-fuel/fit-fuel.module.scss
+++ b/src/components/sections/fit-fuel/fit-fuel.module.scss
@@ -12,7 +12,6 @@
 
     @media(max-width: 767px) {
         border-radius: 30px;
-        // padding: 12px;
         padding: 0;
 
         .title {
@@ -28,6 +27,7 @@
 
         .image {
             margin-top: 50px;
+            padding: 0 12px 12px 0;
         }
     }
 }
