Finish tablet styling ✅

--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -38,7 +38,15 @@
     }
 }
 
-@media(max-width: 767px) {
+@media(max-width: 1199.98px) {
+
+    .header {
+        padding: 0 52px;
+    }
+
+}
+
+@media(max-width: 767.98px) {
     .header {
         padding: 0 20px;
         top: 28px;
