--- a/src/components/sections/fit-fuel/fit-fuel.module.scss
+++ b/src/components/sections/fit-fuel/fit-fuel.module.scss
@@ -3,6 +3,14 @@
     border-radius: $border-radius_80;
     padding: 57px 48px 57px 0;
 
+    >div {
+        flex: 1;
+    }
+
+    .bolt_icon {
+        max-width: 123px;
+    }
+
     .image {
         position: relative;
         width: 100%;
@@ -10,7 +18,13 @@
         display: flex;
     }
 
-    @media(max-width: 767px) {
+
+    @media(max-width: 1199.98px) {
+        .title {
+            padding: 40px;
+        }
+    }
+    @media(max-width: 767.98px) {
         border-radius: 30px;
         padding: 0;
 
