--- a/src/components/sections/workout/workout.module.scss
+++ b/src/components/sections/workout/workout.module.scss
@@ -1,12 +1,19 @@
 .Workout_btn {
     margin-top: 86px;
 
-    @media(max-width: 767px) {
+    @media(max-width: 767.98px) {
         margin-top: 32px;
     }
 }
 
-@media(max-width: 767px) {
+.image_box {
+    max-width: calc(100% - 50px);
+}
+.image {
+    height: auto;
+}
+
+@media(max-width: 767.98px) {
     .image {
         height: auto;
     }
@@ -21,7 +28,7 @@
     top: 29%;
     left: -4%;
 
-    @media(max-width: 767px) {
+    @media(max-width: 767.98px) {
         width: 14px;
         height: 39px;
         top: 32%;
@@ -36,7 +43,7 @@
         height: 108px;
         transform: rotate(90deg);
 
-        @media(max-width: 767px) {
+        @media(max-width: 767.98px) {
             width: 14px;
             height: 39px;
         }
