--- a/src/components/sections/dream-bigger/dream.module.scss
+++ b/src/components/sections/dream-bigger/dream.module.scss
@@ -1,8 +1,10 @@
 .section {
-    margin: 100px 0 122px;
-    @media(max-width: 767px) {
+    margin: 240px 0 122px;
+
+    @media(max-width: 767.98px) {
         margin: 42px 0 32px;
     }
+
     .card {
         background-color: $color-background-secondary-dark;
         color: $color-white;
@@ -14,17 +16,36 @@
         font-size: 24px;
         font-weight: 800;
 
-        @media(max-width: 767px) {
-            height: 175px;
+        @media(max-width: 1199.98px) {
+            font-size: 20px;
+            height: 100%;
+            border-radius: 40px;
+        }
+
+        @media(max-width: 991.98px) {
+            font-size: 16px;
+        }
+
+        @media(max-width: 767.98px) {
+            min-height: 175px;
             border-radius: 32px;
             font-size: 12px;
+            height: 100%;
         }
 
         .count {
             font-weight: 700;
             font-size: 79.8px;
 
-            @media(max-width: 767px) {
+            @media(max-width: 1199.98px) {
+                font-size: 58px;
+            }
+
+            @media(max-width: 991.98px) {
+                font-size: 48px;
+            }
+
+            @media(max-width: 767.98px) {
                 font-size: 42px;
             }
         }
@@ -33,13 +54,33 @@
             font-weight: 700;
             font-size: 31px;
 
+            @media(max-width: 1199.98px) {
+                font-size: 24px;
+            }
 
-            @media(max-width: 767px) {
+            @media(max-width: 991.98px) {
+                font-size: 20px;
+            }
+
+            @media(max-width: 767.98px) {
                 font-size: 16px;
             }
         }
 
-        @media(max-width: 767px) {
+
+        @media(max-width: 1199.98px) {
+            .count_image {
+                height: 180px;
+            }
+        }
+
+        @media(max-width: 991.98px) {
+            .count_image {
+                height: 120px;
+            }
+        }
+
+        @media(max-width: 767.98px) {
             .count_image {
                 height: 130px;
             }
@@ -49,7 +90,7 @@
         &.app_screen {
             padding: 42px 42px 54px 56px;
 
-            @media(max-width: 767px) {
+            @media(max-width: 767.98px) {
                 height: auto;
                 padding: 21px 21px 28px 29px;
             }
@@ -58,5 +99,14 @@
         &.illustration {
             color: $color-text-muted;
         }
+    }
+
+}
+
+@media(max-width: 766.98px) {
+    .image {
+        display: block;
+        margin: 0 auto;
+        max-height: 175px !important;
     }
 }
