--- a/src/components/ui/main-badge/badge.module.scss
+++ b/src/components/ui/main-badge/badge.module.scss
@@ -13,10 +13,18 @@
     width: fit-content;
     white-space: nowrap;
 
-    @media (max-width: 767px) {
-        font-size: 19.2px;
+    @media(max-width: 991.98px) {
+
+        font-size: 20px;
         gap: 8px;
         height: 64px;
         padding: 0 32px;
     }
+
+    // @media(max-width: 767.98px) {
+    //     font-size: 19.2px;
+    //     gap: 8px;
+    //     height: 64px;
+    //     padding: 0 32px;
+    // }
 }
