--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -60,11 +60,22 @@ p {
   padding-left: 64px;
 }
 
-@media(max-width: 767px) {
+@media(max-width: 1199.98px) {
+  .main_container {
+    // padding: 0 50px;
+    padding: 0 20px;
+  }
+  .padding-left-64 {
+    // padding-left: 50px;
+    padding-left: 20px;
+  }
+}
+
+@media(max-width: 767.98px) {
   body {
     padding: 16px 8px 12px;
   }
-  
+
   .main_container {
     padding: 0 8px;
   }
