--- a/src/components/sections/hero/hero.module.scss
+++ b/src/components/sections/hero/hero.module.scss
@@ -54,6 +54,7 @@
     margin-bottom: 96px;
 
     .tag_btn {
+        opacity: 0;
         color: #fff;
         text-align: center;
         border: 2px solid $border-color;
