--- a/src/components/sections/get-your-fit/fit.module.scss
+++ b/src/components/sections/get-your-fit/fit.module.scss
@@ -2,7 +2,14 @@
     position: relative;
     padding-bottom: 18px;
 
-    @media(max-width: 678px) {
+    @media(max-width: 1199.98px) {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    
+    @media(max-width: 767.98px) {
+        padding-left: 0;
+        padding-right: 0;
         padding: 0 16px 5px;
     }
 
@@ -17,7 +24,7 @@
         z-index: -1;
         border-radius: $border-radius_80;
 
-        @media(max-width: 678px) {
+        @media(max-width: 767.98px) {
             border-radius: 30px;
         }
     }
