--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -15,7 +15,22 @@
         padding: 12px 20px 12px 12px;
         border-radius: $border-radius_70;
         gap: 10px;
-        position: relative;
+
+        &,
+        svg path {
+            transition: background-color .3s ease-in-out, color .3s ease-in-out, fill .3s ease-in-out;
+        }
+
+        &:hover {
+            background-color: $color-white;
+            color: $color-background-primary-dark;
+
+            svg {
+                path {
+                    fill: $color-background-primary-dark;
+                }
+            }
+        }
     }
 
     .logo {
