--- a/src/components/sections/hero/hero.module.scss
+++ b/src/components/sections/hero/hero.module.scss
@@ -65,6 +65,33 @@
         line-height: 110%;
         height: 120px;
         box-sizing: border-box;
+        transition: background-color .3s ease-in-out, color .3s ease-in-out;
+
+        &:hover {
+            background-color: #FFF;
+            color: $color-background-primary-dark;
+        }
+    }
+
+    @keyframes scalePulse {
+
+        0%,
+        100% {
+            transform: scale(1);
+        }
+
+        50% {
+            transform: scale(1.1);
+        }
+    }
+
+    .heart_icon {
+        transition: color .3s ease-in-out;
+
+        &:hover {
+            animation: scalePulse 1.5s ease-in-out infinite;
+            color: $color-primary !important;
+        }
     }
 }
 
